# open-auggd

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
src/open_auggd/: __init__.py
src/open_auggd/cli/: __init__.py  install.py  main.py  tools.py  workspace.py
src/open_auggd/config/: __init__.py  settings.py
src/open_auggd/install/: __init__.py  installer.py  updater.py
src/open_auggd/templates/agents/: auggd.md  oag-auggd.md  oag-developer.md  oag-documenter.md  oag-explorer.md  oag-finalizer.md  oag-planner.md  oag-reviewer.md
src/open_auggd/templates/commands/: oag-develop.md  oag-document.md  oag-explore.md  oag-finalize.md  oag-plan.md  oag-resume.md  oag-review.md  oag-status.md
src/open_auggd/templates/skills/oag-dev-standards/: SKILL.md
src/open_auggd/templates/skills/oag-development-model/: SKILL.md
src/open_auggd/templates/skills/oag-development-tactics/: SKILL.md
src/open_auggd/templates/skills/oag-development-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-devlog-template/: SKILL.md
src/open_auggd/templates/skills/oag-documentation-model/: SKILL.md
src/open_auggd/templates/skills/oag-documentation-standards/: SKILL.md
src/open_auggd/templates/skills/oag-documentation-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-exploration-model/: SKILL.md
src/open_auggd/templates/skills/oag-exploration-tactics/: SKILL.md
src/open_auggd/templates/skills/oag-exploration-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-finalize-model/: SKILL.md
src/open_auggd/templates/skills/oag-finalize-tactics/: SKILL.md
src/open_auggd/templates/skills/oag-finalize-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-iteration-template/: SKILL.md
src/open_auggd/templates/skills/oag-planning-model/: SKILL.md
src/open_auggd/templates/skills/oag-planning-tactics/: SKILL.md
src/open_auggd/templates/skills/oag-planning-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-review-model/: SKILL.md
src/open_auggd/templates/skills/oag-review-tactics/: SKILL.md
src/open_auggd/templates/skills/oag-review-template/: SKILL.md
src/open_auggd/templates/skills/oag-review-workflow/: SKILL.md
src/open_auggd/templates/skills/oag-spec-standards/: SKILL.md
src/open_auggd/templates/skills/oag-spec-template/: SKILL.md
src/open_auggd/templates/skills/oag-tdd-standards/: SKILL.md
src/open_auggd/templates/tools/: oag-develop.ts  oag-document.ts  oag-explore.ts  oag-files.ts  oag-finalize.ts  oag-plan.ts  oag-review.ts  oag-ws.ts
src/open_auggd/tools/: __init__.py  base.py  develop.py  document.py  explore.py  finalize.py  plan.py  review.py
src/open_auggd/workspace/: __init__.py  manager.py  models.py  slugify.py
tests/integration/: test_install.py
tests/unit/: test_config.py  test_install.py  test_slugify.py  test_tools.py  test_tools_base.py  test_workspace_manager.py  test_workspace_models.py
