[project]
name = "open-auggd"
version = "0.1.0"
description = "Auggd: Orchestrated workflow engine for software development with AI agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Matt Lebrun" } ]
requires-python = ">=3.12"

dependencies = [
    "click>=8.0",
    "uuid7>=0.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
auggd = "open_auggd.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-xdist>=2.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "types-Pygments>=2.0; python_version < '3.12'",
    "types-pexpect>=4.0; python_version < '3.12'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_auggd = [
    "templates/agents/*.md",
    "templates/commands/*.md",
    "templates/skills/**/SKILL.md",
    "templates/tools/*.ts",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py"]
addopts = ""
markers = [
    "unit: Unit tests that run fast and don't hit external services",
    "integration: Integration tests that may involve database or multiple components",
    "slow: Slow tests that may involve external services",
]

[tool.ruff]
line-length = 100
exclude = [
    "**/__pycache__",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "D",   # pydocstyle (docstring checks)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "uuid_extensions"
ignore_missing_imports = true

